Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
[EHL] Kernel gets tainted during boot - Missing case (val == 2147483648), WARNING at drivers/gpu/drm/i915/display/intel_ddi.c:1345 intel_ddi_get_config
7>[ 9.827030] [drm:intel_ddi_get_config [i915]] [ENCODER:214:DDI A] Fec status: 0
<7>[ 9.827152] i915 0000:00:02.0: [drm:verify_single_dpll_state.isra.149 [i915]] DPLL 0
<7>[ 9.827526] i915 0000:00:02.0: [drm:verify_connector_state [i915]] [CONNECTOR:223:DP-1]
<7>[ 9.827671] i915 0000:00:02.0: [drm:intel_atomic_commit_tail [i915]] [CRTC:152:pipe B]
<7>[ 9.827958] [drm:intel_ddi_get_config [i915]] [ENCODER:222:DDI B] Fec status: 0
<7>[ 9.828043] i915 0000:00:02.0: [drm:verify_single_dpll_state.isra.149 [i915]] DPLL 1
<7>[ 9.828569] i915 0000:00:02.0: [drm:verify_connector_state [i915]] [CONNECTOR:238:HDMI-A-2]
<7>[ 9.828706] i915 0000:00:02.0: [drm:intel_atomic_commit_tail [i915]] [CRTC:213:pipe C]
<4>[ 9.829065] ------------[ cut here ]------------
<4>[ 9.829069] Missing case (val == 2147483648)
<4>[ 9.829189] WARNING: CPU: 3 PID: 554 at drivers/gpu/drm/i915/display/intel_ddi.c:1345 intel_ddi_get_config+0x58e/0x5f0 [i915]
<4>[ 9.829191] Modules linked in: mei_hdcp x86_pkg_temp_thermal coretemp crct10dif_pclmul crc32_pclmul i915 ghash_clmulni_intel cdc_ether usbnet mii mei_me mei prime_numbers intel_lpss_pci
<4>[ 9.829210] CPU: 3 PID: 554 Comm: kworker/3:5 Not tainted 5.6.0-rc4-CI-CI_DRM_8050+ #1
<4>[ 9.829213] Hardware name: Intel Corporation Elkhart Lake Embedded Platform/ElkhartLake LPDDR4x T3 CRB, BIOS EHLSFWI1.R00.2013.A00.2001020206 01/02/2020
<4>[ 9.829220] Workqueue: events output_poll_execute
<4>[ 9.829293] RIP: 0010:intel_ddi_get_config+0x58e/0x5f0 [i915]
<4>[ 9.829297] Code: 0f 84 2a fc ff ff 81 fa 00 00 00 c0 b8 d0 78 02 00 0f 84 19 fc ff ff 48 c7 c6 05 f1 32 a0 48 c7 c7 a6 ef 32 a0 e8 42 ce e6 e0 <0f> 0b 31 c0 e9 fd fb ff ff 80 cc 01 89 83 c4 03 00 00 e9 13 fd ff
<4>[ 9.829300] RSP: 0018:ffffc900006dfb38 EFLAGS: 00010282
<4>[ 9.829303] RAX: 0000000000000000 RBX: ffff888267b69000 RCX: 0000000000000001
<4>[ 9.829305] RDX: 0000000080000001 RSI: ffff88826cde89c0 RDI: 00000000ffffffff
<4>[ 9.829308] RBP: ffff8882675ea000 R08: ffff88826cde89c0 R09: 0000000000000000
<4>[ 9.829310] R10: 0000000000000000 R11: 0000000000000000 R12: ffff888263940000
<4>[ 9.829312] R13: ffff888263940000 R14: ffff888263940d90 R15: ffff88826ada8800
<4>[ 9.829315] FS: 0000000000000000(0000) GS:ffff888278180000(0000) knlGS:0000000000000000
<4>[ 9.829317] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4>[ 9.829319] CR2: 0000557dc7e7f3d8 CR3: 000000026cdd6000 CR4: 0000000000340ee0
<4>[ 9.829321] Call Trace:
<4>[ 9.829400] intel_atomic_commit_tail+0x706/0x1490 [i915]
<4>[ 9.829492] intel_atomic_commit+0x312/0x390 [i915]
<4>[ 9.829504] drm_client_modeset_commit_atomic+0x1e7/0x250
<4>[ 9.829527] drm_client_modeset_commit_locked+0x3f/0x1a0
<4>[ 9.829536] drm_client_modeset_commit+0x1c/0x40
<4>[ 9.829542] drm_fb_helper_restore_fbdev_mode_unlocked+0x42/0x90
<4>[ 9.829548] drm_fb_helper_set_par+0x24/0x50
<4>[ 9.829552] drm_fb_helper_hotplug_event.part.16+0xbc/0xd0
<4>[ 9.829557] drm_kms_helper_hotplug_event+0x21/0x30
<4>[ 9.829562] output_poll_execute+0x1a0/0x1b0
<4>[ 9.829575] process_one_work+0x260/0x600
<4>[ 9.829579] ? worker_thread+0xc9/0x380
<4>[ 9.829593] worker_thread+0x37/0x380
<4>[ 9.829601] ? process_one_work+0x600/0x600
<4>[ 9.829604] kthread+0x119/0x130
<4>[ 9.829608] ? kthread_park+0x80/0x80
<4>[ 9.829616] ret_from_fork+0x24/0x50
<4>[ 9.829636] irq event stamp: 30488
<4>[ 9.829641] hardirqs last enabled at (30487): [<ffffffff81130af0>] vprintk_emit+0x310/0x330
<4>[ 9.829646] hardirqs last disabled at (30488): [<ffffffff81001d50>] trace_hardirqs_off_thunk+0x1a/0x1c
<4>[ 9.829649] softirqs last enabled at (30472): [<ffffffff81e00385>] __do_softirq+0x385/0x47f
<4>[ 9.829653] softirqs last disabled at (30465): [<ffffffff810bab7a>] irq_exit+0xba/0xc0
<4>[ 9.829655] ---[ end trace f548ccbd3fee37f8 ]---
<3>[ 9.829740] i915 0000:00:02.0: [drm] *ERROR* [CRTC:213:pipe C] mismatch in pixel_rate (expected 148500, found 0)
<3>[ 9.829745] i915 0000:00:02.0: [drm] *ERROR* [CRTC:213:pipe C] mismatch in hw.adjusted_mode.crtc_clock (expected 148500, found 0)
<3>[ 9.829748] i915 0000:00:02.0: [drm] *ERROR* [CRTC:213:pipe C] mismatch in port_clock (expected 222750, found 0)
<4>[ 9.829752] ------------[ cut here ]------------
<4>[ 9.829754] pipe state doesn't match!
<4>[ 9.829854] WARNING: CPU: 3 PID: 554 at drivers/gpu/drm/i915/display/intel_display.c:14256 intel_atomic_commit_tail+0x1200/0x1490 [i915]
<4>[ 9.829856] Modules linked in: mei_hdcp x86_pkg_temp_thermal coretemp crct10dif_pclmul crc32_pclmul i915 ghash_clmulni_intel cdc_ether usbnet mii mei_me mei prime_numbers intel_lpss_pci
<4>[ 9.829871] CPU: 3 PID: 554 Comm: kworker/3:5 Tainted: G W 5.6.0-rc4-CI-CI_DRM_8050+ #1
<4>[ 9.829873] Hardware name: Intel Corporation Elkhart Lake Embedded Platform/ElkhartLake LPDDR4x T3 CRB, BIOS EHLSFWI1.R00.2013.A00.2001020206 01/02/2020
<4>[ 9.829877] Workqueue: events output_poll_execute
<4>[ 9.829948] RIP: 0010:intel_atomic_commit_tail+0x1200/0x1490 [i915]
<4>[ 9.829951] Code: 4b e1 e9 10 f6 ff ff e8 6e 0f eb e0 0f 0b e9 0b f5 ff ff f6 86 67 0c 00 00 10 0f 84 80 f3 ff ff e9 80 f8 ff ff e8 50 0f eb e0 <0f> 0b e9 6e f5 ff ff e8 44 0f eb e0 0f 0b 0f b6 14 24 44 0f b6 44
<4>[ 9.829954] RSP: 0018:ffffc900006dfb78 EFLAGS: 00010286
<4>[ 9.829957] RAX: 0000000000000000 RBX: ffff88826ada8800 RCX: 0000000000000001
<4>[ 9.829959] RDX: 0000000080000001 RSI: ffff88826cde89c0 RDI: 00000000ffffffff
<4>[ 9.829961] RBP: ffff888267b69000 R08: ffff88826cde89c0 R09: 0000000000000000
<4>[ 9.829963] R10: ffffc900006dfb20 R11: 0000000000000000 R12: ffff8882647c1000
<4>[ 9.829965] R13: ffff888263940758 R14: ffff888263940000 R15: ffff888263940750
<4>[ 9.829968] FS: 0000000000000000(0000) GS:ffff888278180000(0000) knlGS:0000000000000000
<4>[ 9.829970] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4>[ 9.829973] CR2: 0000557dc7e7f3d8 CR3: 000000026cdd6000 CR4: 0000000000340ee0
<4>[ 9.829975] Call Trace:
<4>[ 9.830068] intel_atomic_commit+0x312/0x390 [i915]
<4>[ 9.830078] drm_client_modeset_commit_atomic+0x1e7/0x250
<4>[ 9.830102] drm_client_modeset_commit_locked+0x3f/0x1a0
<4>[ 9.830110] drm_client_modeset_commit+0x1c/0x40
<4>[ 9.830116] drm_fb_helper_restore_fbdev_mode_unlocked+0x42/0x90
<4>[ 9.830122] drm_fb_helper_set_par+0x24/0x50
<4>[ 9.830126] drm_fb_helper_hotplug_event.part.16+0xbc/0xd0
<4>[ 9.830131] drm_kms_helper_hotplug_event+0x21/0x30
<4>[ 9.830136] output_poll_execute+0x1a0/0x1b0
<4>[ 9.830148] process_one_work+0x260/0x600
<4>[ 9.830151] ? worker_thread+0xc9/0x380
<4>[ 9.830165] worker_thread+0x37/0x380
<4>[ 9.830173] ? process_one_work+0x600/0x600
<4>[ 9.830176] kthread+0x119/0x130
<4>[ 9.830180] ? kthread_park+0x80/0x80
<4>[ 9.830187] ret_from_fork+0x24/0x50
<4>[ 9.830207] irq event stamp: 30576
<4>[ 9.830211] hardirqs last enabled at (30575): [<ffffffff81130af0>] vprintk_emit+0x310/0x330
<4>[ 9.830214] hardirqs last disabled at (30576): [<ffffffff81001d50>] trace_hardirqs_off_thunk+0x1a/0x1c
<4>[ 9.830218] softirqs last enabled at (30472): [<ffffffff81e00385>] __do_softirq+0x385/0x47f
<4>[ 9.830222] softirqs last disabled at (30465): [<ffffffff810bab7a>] irq_exit+0xba/0xc0
<4>[ 9.830224] ---[ end trace f548ccbd3fee37f9 ]---
````